[package]
name    = "ability"
version = "0.1.0"
authors = ["Michael Hilgendorf <mike@hilgendorf.audio>"]
edition = "2018"
description = "Macros for creating traits with ABI-compatible interfaces across compiler versions"
repository  = "https://github.com/m-hilgendorf/ability.git"
license     = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.11"
proc-macro2 = "0.4.27"

[dependencies.syn]
version = "0.15.26"
features = ["full", "parsing"]
